# OSINT-Tool

./: pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analyzers/: credentials.py  email.py  technologies.py  tls.py
api/: deps.py  main.py
api/routes/: __init__.py  assessment.py  company.py
collectors/: ct_logs.py  dns.py  ipinfo.py  whois.py
core/: config.py
database/: session.py
database/models/: __init__.py  assessment.py  asset.py  company.py  finding.py  score.py
findings/: engine.py
frontend/: .gitignore  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/[id]/: page.tsx
frontend/components/: CategoryChart.tsx  FindingsTable.tsx  RiskBadge.tsx  ScoreCard.tsx  SummaryCard.tsx
reporting/: __init__.py  executive.py  pdf.py
reporting/templates/: report.html
sales/: README.md  __init__.py  engine.py
scoring/: engine.py
services/: assessment_service.py  company_service.py
tasks/: celery_app.py  jobs.py
tests/: conftest.py  test_assessment.py  test_collectors.py  test_scoring.py
