[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eip"
version = "0.1.0"
description = "Exposure Intelligence Platform backend"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
follow_imports = "normal"
show_error_codes = true
packages = [
	"api",
	"analyzers",
	"collectors",
	"core",
	"database",
	"findings",
	"monitoring",
	"reporting",
	"scoring",
	"services",
	"tasks",
	"tests",
]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"

